# lucent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  check_session.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_key_verify.py  test_models.py  test_session_auth.py
.claude/: settings.json
.github/: copilot-instructions.md
daemon/: __init__.py  adaptation.py  cognitive.md  daemon.log.pre-4.7-default  daemon.py  daemon_v2.py  output_validation.py  test_mcp.py  test_opus.py
docker/: init.sql  openbao-dev-config.hcl  openbao-init.sh  openbao-prod-config.hcl  otel-collector-config.yaml  postgres-init.sh  prometheus.yml
docs/: README.md  access-control.md  agent-integration.md  api-reference.md  architecture.md  configuration.md  connections.md  deployment-guide.md  development.md  getting-started.md  integrations-api-reference.md  kubernetes-deployment.md  managed-tools.md  memory-lifecycle-design.md  migration-guide-security.md  observability.md  operator-guide.md  sandboxes.md  secret-storage.md  security-audit-synthesis.md  security-model.md  shadow-forgetting.md  slack-admin-setup.md  slack-security.md  slack-user-linking.md  troubleshooting.md
examples/: agent_integration.py  sandbox_devcontainer.py
sandbox-images/: Dockerfile.base
scripts/: migrate_secrets_to_transit.py
tests/: __init__.py  conftest.py  test_access_api.py  test_access_clause_single_source.py  test_access_control_service.py  test_acl_enforcement.py  test_adaptation.py  test_adaptation_integration.py  test_adapters.py  test_admin_lifecycle_api.py  test_admin_models_api.py  test_agent_composition.py  test_agent_hooks.py  test_anti_spoofing.py  test_api_request_context_middleware.py  test_api_request_logging_output.py  test_attachments.py  test_audit.py  test_auth.py  test_auth_providers.py  test_builtin_protection.py  test_builtin_tools.py  test_chat_model_routing.py  test_cognitive_planning_per_user.py  test_connection_flags.py  test_connections_view_model.py  test_consolidation_execution_regression.py  test_cookie_security.py  test_coordination.py  test_credential_models.py  (+132 more)
(+608 files in other folders)
