[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnememcp"
version = "0.1.0"
description = "MCP server providing memory functionality for LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "kahinton" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
mnememcp = "mnememcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnememcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
