[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucent"
version = "0.1.0"
description = "MCP server providing memory functionality for LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Lucent Source Available License 1.0"}
authors = [
    { name = "kahinton" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/kahinton/lucent"
Repository = "https://github.com/kahinton/lucent"
Issues = "https://github.com/kahinton/lucent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
lucent = "lucent.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lucent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
